<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_top_corner_white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_dtg_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/str_instructions"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="14sp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_dtg1"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tv_dtg_title"
        android:layout_marginTop="29dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:background="@drawable/shape_guide_item"
        >
        <TextView
            android:id="@+id/tv_dtg_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="01"
            android:layout_marginStart="19dp"
            android:textColor="@color/color_text_third"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_dtg_num"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="32dp"
            android:text="@string/str_tip1"
            android:textColor="@color/black"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_dtg2"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/cl_dtg1"
        android:layout_marginTop="12dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:background="@drawable/shape_guide_item"
        >
        <TextView
            android:id="@+id/tv_dtg_num2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="02"
            android:layout_marginStart="19dp"
            android:textColor="@color/color_text_third"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/tv_dtg_num2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="32dp"
            android:text="@string/str_tip2"
            android:textColor="@color/black"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_dtg3"
    android:layout_width="match_parent"
    android:layout_height="105dp"
    android:orientation="horizontal"
    app:layout_constraintTop_toBottomOf="@+id/cl_dtg2"
    android:layout_marginTop="12dp"
    android:layout_marginStart="17dp"
    android:layout_marginEnd="16dp"
    android:gravity="center_vertical"
    android:background="@drawable/shape_guide_item"
    >
    <TextView
        android:id="@+id/tv_dtg_num3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="03"
        android:layout_marginStart="19dp"
        android:textColor="@color/color_text_third"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tv_dtg_num3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="32dp"
        android:text="@string/str_tip3"
        android:textColor="@color/black"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_dtg_ok"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/cl_dtg3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/str_ok"
        android:background="@drawable/shape_blue_corner"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>